test/functions/iterators/errors/inconsistentYieldType.good
inconsistentYieldType.chpl:1: error: unable to resolve yielded type
